# e-paper

./: .gitignore  CLAUDE.md  README.md  config.toml  pyproject.toml  sonar-project.properties
.claude/commands/: review.md
.github/workflows/: sonarcloud.yml
deploy/systemd/: README.md  btcticker.service
docs/: raspberry-pi-waveshare-epaper-bitcoin-ticker.html
epaper/: PriceTicker.py  README.md
ledlightstrip/: README.md  activate.sh  pytest.ini  requirements-test.txt  requirements.txt
ledlightstrip/cli/: cli_handler.py
ledlightstrip/config/: config_manager.py
ledlightstrip/led/: color.py  effect_runner.py  effects.py  gpio_service.py  ledlightstrip_controller.py  profile_manager.py
ledlightstrip/service/: led.service
ledlightstrip/tests/: conftest.py  test_cli_handler.py  test_color.py  test_config_manager.py  test_effect_runner.py  test_effects.py  test_gpio_service.py  test_ledlightstrip_controller.py  test_profile_manager.py
ledstriplight/: README.md  http_server.py  pytest.ini  run.py
ledstriplight/led/: color.py  effects.py
ledstriplight/service/: README.md  homebridge.service  ledstriplight  ledstriplight-http-server.service  ledstriplight.service
ledstriplight/src/: requirements-test.txt
ledstriplight/tests/: test_color.py
src/btcticker/: __main__.py  (+4 more)
systemd/: epaper.service
tests/: test_bitcoin_price_client.py  test_config.py  test_display.py  test_graceful_shutdown.py  test_http_client.py  test_main.py  test_price_client.py  test_price_extractor.py  test_price_ticker.py  test_watchdog.py
utils/: config.py  graceful_shutdown.py
(+17 files in other folders)
