[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "btcticker"
version = "0.1.0"
description = "Bitcoin price ticker for Waveshare 2.13\" e-ink displays on Raspberry Pi"
requires-python = ">=3.13"
dependencies = [
    "requests~=2.33",
    "pillow~=12.2",
]

[project.optional-dependencies]
rpi = [
    "RPi.GPIO~=0.7.1",
    "spidev~=3.8",
    "pigpio~=1.78",
    "gpiozero~=2.0",
    "numpy~=2.4",
    "waveshare-epd @ git+https://github.com/waveshareteam/e-Paper.git@86aa9932f471a50157cf02fafadc2c1b4a965449#subdirectory=RaspberryPi_JetsonNano/python",
]
dev = [
    "pytest~=9.0",
    "pytest-cov~=7.1",
    "pre-commit~=4.5",
    "ruff>=0.15.9",
]

[project.scripts]
btcticker = "btcticker.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/btcticker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/btcticker --cov-report=term-missing --cov-report=xml --cov-config=pyproject.toml"

[tool.coverage.run]
relative_files = true

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = ["src/btcticker/lib"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line-length enforced by formatter, not linter
]
